build out sidebar structure

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 * {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box; /* This ensures that padding does not affect the total width or height of an element */
+  box-sizing: border-box;
 }
