--- a/src/App.scss
+++ b/src/App.scss
@@ -126,6 +126,7 @@
         }
 
         .user {
+          align-items: center;
           display: flex;
           gap: 10px;
 
@@ -142,6 +143,7 @@
             color: #ddddf7;
             font-size: 10px;
             border: none;
+            padding: 5px;
             cursor: pointer;
             @include tablet {
               position: absolute;
@@ -227,7 +229,8 @@
         background-color: #ddddf7;
         padding: 10px;
         height: calc(100% - 160px);
-        overflow: scroll;
+        // overflow: scroll;
+        overflow-y: auto;
 
         .message {
           display: flex;
